...
                isFavourite = { isFavourite(procedure.uuid) }
            )
        }
    }
}

const val PROCEDURE_LIST_TEST_TAG = "procedure_list_test_tag"
const val PROGRESS_ICON_TEST_TAG = "progress_icon_test_tag"

@Composable
@Preview(showBackground = true)
fun ProcedureListScreenPreview() {
    ProceduresScreen(
        uiState = MainViewModel.ProceduresState(
...
