...
import com.example.core.presentation.ui.components.BottomSheet.Companion.BOTTOM_SHEET_IMAGE_GRID_TAG
import com.example.core.presentation.ui.components.BottomSheet.Companion.BOTTOM_SHEET_TEST_TAG
import kotlinx.coroutines.launch

class BottomSheet {
    companion object {
        const val BOTTOM_SHEET_TEST_TAG = "bottom_sheet_test_tag"
        const val BOTTOM_SHEET_ERROR_TEST_TAG = "bottom_sheet_error_test_tag"
        const val BOTTOM_SHEET_IMAGE_GRID_TAG = "bottom_sheet_image_grid_tag"
    }
}

@Composable
...
